# JsCompat

./: .gitignore  Cargo.toml
examples/ping/: index.js  package.json  webpack.config.js
examples/svelte-example/: package.json  pnpm-lock.yaml  rollup.config.js  svelte.config.js  vite.config.ts
examples/svelte-example/src/lib/: Datum.svelte  KlassenKachel.svelte  Vertretung.svelte  VertretungsTabelle.svelte
examples/svelte-example/src/routes/: +page.svelte
src/: lib.rs
